[tool.poetry]
name = "barkr"
version = "0.12.0"
description = "Yet another cross-posting tool in Python"
authors = ["Andrés Ignacio Torres <dev@aitorres.com>"]
readme = "README.md"
repository = "https://github.com/aitorres/barkr"
keywords = [
    "python",
    "cli",
    "social media",
    "crossposting",
    "mastodon",
    "fediverse",
    "twitter",
    "bluesky",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Internet",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aitorres/barkr/issues"
"Change Log" = "https://github.com/aitorres/barkr/blob/main/CHANGELOG.md"


[tool.poetry.dependencies]
python = "^3.10.0, <3.15"
beautifulsoup4 = "^4.14.3"
lxml = "^6.1.0"
mastodon-py = "^2.2.1"
tweepy = "^4.16.0"
atproto = "^0.0.65"
python-telegram-bot = "^22.7"
discord-py = "^2.7.1"
feedparser = "^6.0.12"
requests = "^2.33.1"
pillow = "^12.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.0"
flake8 = "^7.3.0"
black = "^26.3.1"
mypy = "^1.20.2"
pylint = "^4.0.5"
isort = "^8.0.1"
types-beautifulsoup4 = "^4.12.0.20250516"
types-requests = "^2.33.0.20260503"

[tool.isort]
src_paths = ["barkr", "tests"]
profile = "black"
line_length = 90

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tweepy.*", "atproto.*", "atproto_client.exceptions.*", "feedparser.*"]
follow_untyped_imports = true

[tool.pylint.FORMAT]
max-line-length=90
good-names="id"

[tool.pylint]
disable="W0223"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
