[project]
name = "barkr"
version = "0.12.0"
description = "Yet another cross-posting tool in Python"
authors = [
    { name = "Andrés Ignacio Torres", email = "dev@aitorres.com" },
]
readme = "README.md"
requires-python = ">=3.10.0,<3.15"
license = "AGPL-3.0-or-later"
keywords = [
    "python",
    "cli",
    "social media",
    "crossposting",
    "mastodon",
    "fediverse",
    "twitter",
    "bluesky",
    "discord",
    "telegram",
    "rss",
    "webhook",
    "atproto",
    "automation",
    "social media automation",
]
dynamic = ["classifiers"]
dependencies = [
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "mastodon-py (>=2.2.1,<3.0.0)",
    "tweepy (>=4.16.0,<5.0.0)",
    "atproto (>=0.0.65,<0.0.66)",
    "python-telegram-bot (>=22.7,<23.0)",
    "discord-py (>=2.7.1,<3.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
]

[project.urls]
Repository = "https://github.com/aitorres/barkr"
"Bug Tracker" = "https://github.com/aitorres/barkr/issues"
"Change Log" = "https://github.com/aitorres/barkr/blob/main/CHANGELOG.md"

[tool.poetry]
requires-poetry = ">=2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"
pre-commit = "^4.6.0"
flake8 = "^7.3.0"
black = "^26.3.1"
mypy = "^1.20.2"
pylint = "^4.0.5"
isort = "^8.0.1"
types-beautifulsoup4 = "^4.12.0.20250516"
types-requests = "^2.33.0.20260503"

[tool.isort]
src_paths = ["barkr", "tests"]
profile = "black"
line_length = 90

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tweepy.*", "atproto.*", "atproto_client.exceptions.*", "feedparser.*"]
follow_untyped_imports = true

[tool.pylint.FORMAT]
max-line-length=90
good-names="id"

[tool.pylint]
disable="W0223"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
